--- a/spotify/Dockerfile
+++ b/spotify/Dockerfile
@@ -18,6 +18,9 @@ RUN \
     \
     && apk add --no-cache \
         pulseaudio=16.1-r10 \
+        python3=3.11.6-r0 \
+        py3-pip=23.1.2-r0 \
+    && pip3 install requests \
     \
     && cargo install \
         --locked \
